exports[`drawer component accordion renders as expected 1`] = `
<div
  className="sc-EHOje ktKLsF">
  <div
    className="first sc-bwzfXH dYpfLQ">
    <div
      id="abcdef"
      role="heading">
      <button
        aria-controls="abcdef"
        aria-expanded={true}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}>
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa dRgmsV"
            content="63d"
            fontFamily="oecom-icons"
            fontSize="inherit" />
          collapse 1
        </span>
      </button>
    </div>
    <div
      aria-labelledby="abcdef"
      className="sc-ifAKCX eMUdZt"
      id="abcdef"
      role="region"
      style={
        Object {
          "display": null,
          "height": "auto",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      }>
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }>
        first
      </div>
    </div>
  </div>
  <div
    className="second sc-bwzfXH dYpfLQ">
    <div
      id="abcdef"
      role="heading">
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}>
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit" />
          collapse 2
        </span>
      </button>
    </div>
    <div
      aria-labelledby="abcdef"
      className="sc-ifAKCX eMUdZt"
      id="abcdef"
      role="region"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="third sc-bwzfXH dYpfLQ">
    <div
      id="abcdef"
      role="heading">
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}>
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit" />
          collapse 3
        </span>
      </button>
    </div>
    <div
      aria-labelledby="abcdef"
      className="sc-ifAKCX eMUdZt"
      id="abcdef"
      role="region"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
</div>
`;

exports[`drawer component drawer renders as expected 1`] = `
<div
  className="important sc-EHOje ktKLsF">
  <div
    className="first sc-bwzfXH dYpfLQ">
    <div
      id="abcdef"
      role="heading">
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}>
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit" />
          collapse 1
        </span>
        <aside>
          side text
        </aside>
      </button>
    </div>
    <div
      aria-labelledby="abcdef"
      className="sc-ifAKCX eMUdZt"
      id="abcdef"
      role="region"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="second sc-bwzfXH dYpfLQ">
    <div
      id="abcdef"
      role="heading">
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}>
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit" />
          collapse 2
        </span>
      </button>
    </div>
    <div
      aria-labelledby="abcdef"
      className="sc-ifAKCX eEgeqQ"
      id="abcdef"
      role="region"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="third sc-bwzfXH dYpfLQ">
    <div
      id="abcdef"
      role="heading">
      <button
        aria-controls="abcdef"
        aria-expanded={false}
        className="sc-htpNat ebhkUu"
        onClick={[Function]}>
        <span>
          <i
            aria-hidden={true}
            className="sc-bxivhb beQLQJ sc-bdVaJa iOqSxE"
            content="63f"
            fontFamily="oecom-icons"
            fontSize="inherit" />
          collapse 3
        </span>
      </button>
    </div>
    <div
      aria-labelledby="abcdef"
      className="sc-ifAKCX eMUdZt"
      id="abcdef"
      role="region"
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
</div>
`;
